Refactor predictor route and simplify prediction response; update team member details and contact information in templates.

--- a/random forest/templates/about.html
+++ b/random forest/templates/about.html
@@ -355,7 +355,7 @@
                         <div class="team-avatar">
                             <i class="fas fa-cogs"></i>
                         </div>
-                        <h4>Dr. Michael Chen</h4>
+                        <h4>Dr. Abdulmalik Saidu</h4>
                         <p class="text-primary">Chief Technology Officer</p>
                         <p class="text-muted">Pioneering our AI and machine learning initiatives to advance healthcare technology.</p>
                     </div>
@@ -451,7 +451,7 @@
                     <h6>Contact Info</h6>
                     <p class="text-white-50">
                         <i class="fas fa-map-marker-alt me-2"></i>123 Medical Center Dr.<br>
-                        <i class="fas fa-phone me-2"></i>(555) 123-4567<br>
+                        <i class="fas fa-phone me-2"></i>(234) 906-797-0588<br>
                         <i class="fas fa-envelope me-2"></i>info@medicare.com
                     </p>
                 </div>
