--- a/random forest/templates/contact.html
+++ b/random forest/templates/contact.html
@@ -249,9 +249,9 @@
                         </div>
                         <h4>Call Us</h4>
                         <p class="text-muted">
-                            Main: (555) 123-4567<br>
-                            Emergency: (555) 911-0000<br>
-                            Fax: (555) 123-4568
+                            Main: (234) 906-797-0588<br>
+                            Emergency: (234) 911-0000<br>
+                            Fax: (234) 906-797-0589
                         </p>
                     </div>
                 </div>
